# aisuitemcp

./: .env.sample  .gitignore  README.md  pyproject.toml  setup.py
aisuite_mcp/: __init__.py  client.py  models.py
aisuite_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aisuite_mcp/format/: __init__.py  parser.py
aisuite_mcp/orchestrator/: __init__.py  orchestrator.py
aisuite_mcp/review/: __init__.py  manager.py
aisuite_mcp/tools/: __init__.py  manager.py
aisuite_mcp/utils/: __init__.py  config.py  reasoning.py
examples/: basic_usage.py  enhanced_reasoning.py  test_implementation.py
tests/: __init__.py  test_format_parser.py  test_standard_review.py
