[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aisuite_mcp"
version = "0.1.0"
description = "Multi-Component Platform for AI-to-AI peer review built on AISuite"
readme = "README.md"
authors = [
    {name = "AI Suite MCP Team"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aisuite>=0.1.5",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "typing-extensions>=4.0.0",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/microsoftmj/aisuitemcp"
Repository = "https://github.com/microsoftmj/aisuitemcp"

[project.optional-dependencies]
dotenv = ["python-dotenv>=1.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
packages = ["aisuite_mcp"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
